[package]
name = "lninfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.1"
clap = { version="4.0.18", features = ["derive"] }
lightning = "0.0.111"
lightning-net-tokio = "0.0.111"
secp256k1 = {version="0.24.0", features=[ "rand-std", "global-context"]}
tokio = {version="1.21.2", features=["full"]}